# japyconjugator

./: LICENSE  README.md  conjugators.py  defs.py  pyproject.toml
src/japyconjugator/: conjugate.py  defs.py
src/japyconjugator/adjectives/: conjugate.py  conjugation_helpers.py  conjugators.py  defs.py
src/japyconjugator/verbs/: __init__.py  conjugate.py  conjugation_helpers.py  conjugators.py  defs.py
